--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
 
   vsftpd:
+    container_name: ftp
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -11,10 +12,14 @@ services:
         GROUP_ID: 1000
     restart: always
     ports:
-      - 0.0.0.0:20:20
-      - 0.0.0.0:21:21
-      - 21100-21110:21100-21110
+        - 0.0.0.0:20:20
+        - 0.0.0.0:21:21
+        - 0.0.0.0:21100-21110:21100-21110
+        - 0.0.0.0:990:990
     volumes:
       - ./home:/home/vsftpd
       - ./logs:/var/log/vsftpd
-      - ./cert:/etc/vsftpd/cert
+      - nginx-certs:/certs
+volumes:
+  nginx-certs:
+    external: true
